welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: method finTest has return statement; needs result type
    return true
    ^SnakeBuggle:17: error: method finTest has return statement; needs result type
  }else{return false}
        ^